--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ html{
     font-weight: 700;
     color:var(--color-title);
     text-align: center;
-    width: min-content;
+    word-spacing: 100vw;
 }
 
 /*END main mobile version*/
