--- a/styles/main.css
+++ b/styles/main.css
@@ -80,7 +80,9 @@ html{
         align-items: center;
     }
     .header-logo-img{
-        margin: 20px 30px;
+        margin-left: 30px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
     .header-nav{
         margin-right: 30px;
@@ -88,7 +90,7 @@ html{
     }
 
     .main-title{
-        font-size: 40px;
+        font-size: 4rem;
     }
 }
 
