--- a/styles/main.css
+++ b/styles/main.css
@@ -26,19 +26,18 @@ html{
 
 .header-logo-img{
     width: 155px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    padding-top: 10px;
+
 }
 
 .header-nav{
+    margin-top: 10px;
     margin-bottom: 13px;
 }
 
 .header-nav-ul{
     display: flex;
-    gap: 20px;
     justify-content: center;
-
 }
 
 .header-nav-link{
@@ -46,7 +45,8 @@ html{
     font-weight: 400;
     color: var(--color-menu-text);
     text-decoration: none;
-    text-transform:uppercase;
+    text-transform: uppercase;
+    padding: 10px;
 }
 
 /*END header mobile version*/
@@ -80,12 +80,13 @@ html{
         justify-content: space-between;
     }
     .header-logo-img{
-        margin-left: 30px;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        padding-left: 30px;
+        padding-top: 20px;
+        padding-bottom: 18px;
     }
     .header-nav{
-        margin-right: 30px;
+        margin-right: 20px;
+        margin-top: 0px;
         margin-bottom: 0px;
     }
 
